--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Open CP</title>
-    <!-- CSS files -->
+
     <link href="./dist/css/tabler.min.css" rel="stylesheet" />
     <link href="./dist/css/tabler-flags.min.css" rel="stylesheet" />
     <link href="./dist/css/tabler-payments.min.css" rel="stylesheet" />
@@ -27,7 +27,7 @@
 <body>
     <script src="./dist/js/demo-theme.min.js"></script>
     <div class="page">
-        <!-- Navbar -->
+
         <header class="navbar navbar-expand-md d-print-none">
             <div class="container-xl">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-menu"
@@ -42,8 +42,7 @@
                 <div class="navbar-nav flex-row order-md-last">
                     <div class="nav-item d-none d-md-flex me-3">
                         <div class="btn-list">
-                            <a href="https://github.com/tabler/tabler" class="btn" target="_blank" rel="noreferrer">
-                                <!-- Download SVG icon from http://tabler-icons.io/i/brand-github -->
+                            <a href="https://github.com/Open-Competitive-Programming" class="btn" target="_blank" rel="noreferrer">
                                 <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24"
                                     viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none"
                                     stroke-linecap="round" stroke-linejoin="round">
@@ -51,10 +50,9 @@
                                     <path
                                         d="M9 19c-4.3 1.4 -4.3 -2.5 -6 -3m12 5v-3.5c0 -1 .1 -1.4 -.5 -2c2.8 -.3 5.5 -1.4 5.5 -6a4.6 4.6 0 0 0 -1.3 -3.2a4.2 4.2 0 0 0 -.1 -3.2s-1.1 -.3 -3.5 1.3a12.3 12.3 0 0 0 -6.2 0c-2.4 -1.6 -3.5 -1.3 -3.5 -1.3a4.2 4.2 0 0 0 -.1 3.2a4.6 4.6 0 0 0 -1.3 3.2c0 4.6 2.7 5.7 5.5 6c-.6 .6 -.6 1.2 -.5 2v3.5" />
                                 </svg>
-                                Source code
+                                Contribute
                             </a>
-                            <a href="https://github.com/sponsors/codecalm" class="btn" target="_blank" rel="noreferrer">
-                                <!-- Download SVG icon from http://tabler-icons.io/i/heart -->
+                            <a href="./error-maintenance.html" class="btn" target="_blank" rel="noreferrer">
                                 <svg xmlns="http://www.w3.org/2000/svg" class="icon text-pink" width="24" height="24"
                                     viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none"
                                     stroke-linecap="round" stroke-linejoin="round">
@@ -69,7 +67,6 @@
                     <div class="d-none d-md-flex">
                         <a href="?theme=dark" class="nav-link px-0 hide-theme-dark" title="Enable dark mode"
                             data-bs-toggle="tooltip" data-bs-placement="bottom">
-                            <!-- Download SVG icon from http://tabler-icons.io/i/moon -->
                             <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24"
                                 viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none"
                                 stroke-linecap="round" stroke-linejoin="round">
@@ -80,7 +77,6 @@
                         </a>
                         <a href="?theme=light" class="nav-link px-0 hide-theme-light" title="Enable light mode"
                             data-bs-toggle="tooltip" data-bs-placement="bottom">
-                            <!-- Download SVG icon from http://tabler-icons.io/i/sun -->
                             <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24"
                                 viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none"
                                 stroke-linecap="round" stroke-linejoin="round">
@@ -93,7 +89,6 @@
                         <div class="nav-item dropdown d-none d-md-flex me-3">
                             <a href="#" class="nav-link px-0" data-bs-toggle="dropdown" tabindex="-1"
                                 aria-label="Show notifications">
-                                <!-- Download SVG icon from http://tabler-icons.io/i/bell -->
                                 <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24"
                                     viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none"
                                     stroke-linecap="round" stroke-linejoin="round">
@@ -123,7 +118,6 @@
                                                 </div>
                                                 <div class="col-auto">
                                                     <a href="#" class="list-group-item-actions">
-                                                        <!-- Download SVG icon from http://tabler-icons.io/i/star -->
                                                         <svg xmlns="http://www.w3.org/2000/svg" class="icon text-muted"
                                                             width="24" height="24" viewBox="0 0 24 24" stroke-width="2"
                                                             stroke="currentColor" fill="none" stroke-linecap="round"
@@ -147,7 +141,6 @@
                                                 </div>
                                                 <div class="col-auto">
                                                     <a href="#" class="list-group-item-actions show">
-                                                        <!-- Download SVG icon from http://tabler-icons.io/i/star -->
                                                         <svg xmlns="http://www.w3.org/2000/svg" class="icon text-yellow"
                                                             width="24" height="24" viewBox="0 0 24 24" stroke-width="2"
                                                             stroke="currentColor" fill="none" stroke-linecap="round"
@@ -171,7 +164,6 @@
                                                 </div>
                                                 <div class="col-auto">
                                                     <a href="#" class="list-group-item-actions">
-                                                        <!-- Download SVG icon from http://tabler-icons.io/i/star -->
                                                         <svg xmlns="http://www.w3.org/2000/svg" class="icon text-muted"
                                                             width="24" height="24" viewBox="0 0 24 24" stroke-width="2"
                                                             stroke="currentColor" fill="none" stroke-linecap="round"
@@ -197,7 +189,6 @@
                                                 </div>
                                                 <div class="col-auto">
                                                     <a href="#" class="list-group-item-actions">
-                                                        <!-- Download SVG icon from http://tabler-icons.io/i/star -->
                                                         <svg xmlns="http://www.w3.org/2000/svg" class="icon text-muted"
                                                             width="24" height="24" viewBox="0 0 24 24" stroke-width="2"
                                                             stroke="currentColor" fill="none" stroke-linecap="round"
